[package]
name = "pulse"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bitflags = { version = "2.6.0", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
crossbeam-channel = "0.5.14"
env_logger = "0.11.5"
log = "0.4.22"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
packet_enum = "0.1.6"
parking_lot = "0.12.3"
sdl2 = "0.37.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_bytes = "0.11.15"
socket2 = "0.5.8"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.8"

[workspace]
resolver = "2"
members = ["client", "server"]

[profile.release]
lto = true
codegen-units = 1
strip = true
